# littlechatgpt

./: .gitignore  Dockerfile  cli.sh  pyproject.toml  requirements.txt
ia/: dataset.py  dataset_tri.py  reseau.py  t.py  test.py  testIa.py  testia3.py  testoutline.py  train.py
