[tool.poetry]
name = "littlechatgpt"
version = "0.1.0"
description = "test de creation de gpt 2"
authors = ["Molieres Jonathan <jonathan.molieres@surviving-data.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"

transformers = "^4.31.0"
apache-beam = "^2.49.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
